// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/cloud_table cloud table displays without header 1`] = `
<CloudTable
  list={
    Array [
      Array [
        <p>
          content
        </p>,
        <p>
          content
        </p>,
        <ReaactEl>
          content
        </ReaactEl>,
      ],
      Array [
        <p>
          content
        </p>,
        <p>
          content
        </p>,
        <ReaactEl>
          content
        </ReaactEl>,
      ],
    ]
  }
>
  <table
    className="CloudTable"
  >
    <thead />
    <tbody>
      <tr
        className="CloudTable__table-row"
        key="0"
      >
        <td
          key="row1-td1"
        >
          <p
            key="row1-td1"
          >
            content
          </p>
        </td>
        <td
          key="row1-td2"
        >
          <p
            key="row1-td2"
          >
            content
          </p>
        </td>
        <td
          key="row1-td3"
        >
          <ReaactEl
            key="row1-td3"
          >
            <p>
              content
            </p>
          </ReaactEl>
        </td>
      </tr>
      <tr
        className="CloudTable__table-row"
        key="1"
      >
        <td
          key="row2-td1"
        >
          <p
            key="row2-td1"
          >
            content
          </p>
        </td>
        <td
          key="row2-td2"
        >
          <p
            key="row2-td2"
          >
            content
          </p>
        </td>
        <td
          key="row2-td3"
        >
          <ReaactEl
            key="row2-td3"
          >
            <p>
              content
            </p>
          </ReaactEl>
        </td>
      </tr>
    </tbody>
  </table>
</CloudTable>
`;

exports[`admin_console/cloud_table cloud table match snapshot 1`] = `
<table
  className="CloudTable"
>
  <thead>
    <tr
      className="CloudTable__table-header"
    >
      <th
        key="0"
      >
        <p
          key="header1"
        >
          content
        </p>
      </th>
      <th
        key="1"
      >
        <ReaactEl
          key="header2"
        >
          content
        </ReaactEl>
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="CloudTable__table-row"
      key="0"
    >
      <td
        key="row1-td1"
      >
        <p
          key="row1-td1"
        >
          content
        </p>
      </td>
      <td
        key="row1-td2"
      >
        <p
          key="row1-td2"
        >
          content
        </p>
      </td>
      <td
        key="row1-td3"
      >
        <ReaactEl
          key="row1-td3"
        >
          content
        </ReaactEl>
      </td>
    </tr>
    <tr
      className="CloudTable__table-row"
      key="1"
    >
      <td
        key="row2-td1"
      >
        <p
          key="row2-td1"
        >
          content
        </p>
      </td>
      <td
        key="row2-td2"
      >
        <p
          key="row2-td2"
        >
          content
        </p>
      </td>
      <td
        key="row2-td3"
      >
        <ReaactEl
          key="row2-td3"
        >
          content
        </ReaactEl>
      </td>
    </tr>
  </tbody>
</table>
`;
